Thu Oct 28 03:14:48 UTC 2010  James H. Hill  <hillj at cs dot iupui dot edu>

        * integration/cruisecontrol/ant-vc8.bat:
        * integration/cruisecontrol/ant-vc9.bat:

          Updated wrapper script to invoke a configuration script, if it
          is defined. This will initialize the build specific configuration
          for the build environment.

Thu Oct 28 02:32:05 UTC 2010  James H. Hill  <hillj at cs dot iupui dot edu>

        * integration/cruisecontrol/ant-vc8.bat:
        * integration/cruisecontrol/ant-vc9.bat:

          Wrapper scripts for running ANT under CruiseControl while
          making sure the Visual Studio environment variables are set.

Tue Oct 26 22:45:24 UTC 2010  James H. Hill  <hillj at cs dot iupui dot edu>

        * MDE/GME/paradigms/PICML/interpreter/quotas/integrator:

          Updated the ignore list.

Tue Oct 26 22:42:45 UTC 2010  James H. Hill  <hillj at cs dot iupui dot edu>

        * MDE/GME/paradigms/CBML-WML/models/PerformanceTests.xme:

          Updated to latest version of metamodel.

        * MDE/GME/paradigms/CBML-WML/paradigm/CBML-WML.xme:
        * MDE/GME/paradigms/CBML-WML/paradigm/CBML_WML.mta:
        * MDE/GME/paradigms/CBML-WML/paradigm/CBML_WML.xmp:

          Removed the decorator on the variables.

        * MDE/GME/paradigms/PICML/interpreter/quotas/integrator/Quotas_Integrator_Impl.h:
        * MDE/GME/paradigms/PICML/interpreter/quotas/integrator/Quotas_Integrator_Impl.cpp:

          Added support for creating connection between test object
          and test driver now that add-on bug has been fixed.

Mon Oct 25 20:10:48 UTC 2010  James H. Hill  <hillj at cs dot iupui dot edu>

        * MDE/GME/paradigms/CBML-WML/paradigm/CBML-WML.xme:
        * MDE/GME/paradigms/CBML-WML/paradigm/CBML_WML.mta:
        * MDE/GME/paradigms/CBML-WML/paradigm/CBML_WML.xmp:

          Simplified the abstract model.

        * MDE/GME/paradigms/CBML-WML/models/PerformanceTests.xme:
