@@ -1,3 +1,13 @@
+Thu Oct 28 04:12:30 UTC 2010  James H. Hill  <hillj at cs dot iupui dot edu>
+
+        * integration/cruisecontrol/ant-vc8.bat:
+        * integration/cruisecontrol/ant-vc9.bat:
+        * integration/cruisecontrol/cuts-vc8.config.xml:
+        * integration/cruisecontrol/cuts-vc9.config.xml:
+
+          Fixed errors in the build script/configuration related to
+          hosting multiple build types on the same machine.
+
 Thu Oct 28 03:14:48 UTC 2010  James H. Hill  <hillj at cs dot iupui dot edu>
 
         * integration/cruisecontrol/ant-vc8.bat:
